@@ -1,0 +1,7 @@
+## ------------------ ##
+## User Preferences.  ##
+## ------------------ ##
+
+begin-language: "Autoconf"
+args: --warnings=no-syntax
+end-language: "Autoconf"
